remove -a from cp command as mac os x 10.5 cp does not have the switch

--- a/cocoa/Makefile.target
+++ b/cocoa/Makefile.target
@@ -221,7 +221,7 @@ package-cocoa: NetSurf.dmg
 NetSurf.tmp.dmg: NetSurf.app
 	hdiutil create -size 8m -fs HFS+ -volname "NetSurf" $@
 	hdiutil attach $@
-	cp -a $^ /Volumes/NetSurf/
+	cp $^ /Volumes/NetSurf/
 	hdiutil detach $$(echo $$(hdiutil attach $@ | cut -f 1)  | cut -f 1 -d ' ')
 
 NetSurf.dmg: NetSurf.tmp.dmg
