--- a/amiga/Makefile.target
+++ b/amiga/Makefile.target
@@ -64,7 +64,7 @@ else
   ifeq ($(SUBTARGET),os3)
     LDFLAGS += -liconv
   else
-    LDFLAGS += -lauto -lpbl
+    LDFLAGS += -lauto -lpbl -liconv
   endif
 
   ifeq ($(NETSURF_AMIGA_CAIRO_AVAILABLE),yes)
