Revert "Link against libiconv"
This reverts commit aa3760bd550fe2a625947828fb7847693657aba2.

--- a/amiga/Makefile.target
+++ b/amiga/Makefile.target
@@ -64,7 +64,7 @@ else
   ifeq ($(SUBTARGET),os3)
     LDFLAGS += -liconv
   else
-    LDFLAGS += -lauto -lpbl -liconv
+    LDFLAGS += -lauto -lpbl
   endif
 
   ifeq ($(NETSURF_AMIGA_CAIRO_AVAILABLE),yes)
