--- a/Makefile.sources
+++ b/Makefile.sources
@@ -26,7 +26,7 @@ S_HTTP := challenge.c generics.c primitives.c parameter.c		\
 
 S_DESKTOP := cookies.c history_global_core.c hotlist.c knockout.c	\
 	mouse.c options.c plot_style.c print.c search.c searchweb.c	\
-	scrollbar.c sslcert.c textarea.c thumbnail.c tree.c		\
+	scrollbar.c sslcert.c textarea.c thumbnail.c tree.c treeview.c	\
 	tree_url_node.c version.c
 
 # Javascript sources
