Try to get Windows building with FatMessages.  This approach makes me ill, and may not even work.

--- a/windows/Makefile.target
+++ b/windows/Makefile.target
@@ -85,8 +85,11 @@ install-windows:
 
 package-windows: netsurf-installer.exe
 
-WIN_RES_OBJ := installer.nsi NetSurf.ico netsurf.png welcome.html default.css messages
-WIN_RES_INS_OBJ := $(addprefix windows/res/,$(WIN_RES_OBJ))
+WIN_RES_OBJ := installer.nsi NetSurf.ico netsurf.png welcome.html default.css
+WIN_RES_INS_OBJ := $(addprefix windows/res/,$(WIN_RES_OBJ)) $(OBJROOT)/messages
+
+$(OBJROOT)/messages: resources/FatMessages
+	$(PERL) utils/split-messages.pl en all < resources/FatMessages > $@
 
 netsurf-installer.exe: $(EXETARGET) $(WIN_RES_INS_OBJ)
 	makensis -V4 -NOCD windows/res/installer.nsi 
