--- a/framebuffer/Makefile.target
+++ b/framebuffer/Makefile.target
@@ -139,7 +139,7 @@ $(eval $(foreach V,$(filter FB_IMAGE_%,$(.VARIABLES)),$(call convert_image,$($(V
 # ----------------------------------------------------------------------------
 
 # S_FRAMEBUFFER are sources purely for the framebuffer build
-S_FRAMEBUFFER := gui.c framebuffer.c tree.c save.c schedule.c		\
+S_FRAMEBUFFER := gui.c framebuffer.c tree.c schedule.c			\
 	thumbnail.c misc.c bitmap.c filetype.c login.c findfile.c	\
 	localhistory.c system_colour.c clipboard.c
 
