--- a/gtk/Makefile.target
+++ b/gtk/Makefile.target
@@ -139,10 +139,10 @@ install-gtk:
 	$(Q)mkdir -p $(DESTDIR)$(NETSURF_GTK_RESOURCES)throbber
 	$(Q)mkdir -p $(DESTDIR)$(NETSURF_GTK_RESOURCES)icons
 	$(Q)mkdir -p $(DESTDIR)$(NETSURF_GTK_BIN)
-	$(Q)install -vC nsgtk $(DESTDIR)$(NETSURF_GTK_BIN)netsurf
-	$(Q)install -vC -m 0644 -t $(DESTDIR)$(NETSURF_GTK_RESOURCES) $(GTK_RESOURCES_LIST)
-	$(Q)install -vC -m 0644 -t $(DESTDIR)$(NETSURF_GTK_RESOURCES)/icons gtk/res/icons/*.png
-	$(Q)install -vC -m 0644 -t $(DESTDIR)$(NETSURF_GTK_RESOURCES)/throbber gtk/res/throbber/*.png
+	$(Q)install -v nsgtk $(DESTDIR)$(NETSURF_GTK_BIN)netsurf
+	$(Q)install -v -m 0644 -t $(DESTDIR)$(NETSURF_GTK_RESOURCES) $(GTK_RESOURCES_LIST)
+	$(Q)install -v -m 0644 -t $(DESTDIR)$(NETSURF_GTK_RESOURCES)/icons gtk/res/icons/*.png
+	$(Q)install -v -m 0644 -t $(DESTDIR)$(NETSURF_GTK_RESOURCES)/throbber gtk/res/throbber/*.png
 	$(Q)tar c -h -C gtk/res themes | tar xv -C $(DESTDIR)$(NETSURF_GTK_RESOURCES)
 	$(Q)tar c -h -C gtk/res $(GTK_TRANSLATIONS_HTML) | tar xv -C $(DESTDIR)$(NETSURF_GTK_RESOURCES)
 	$(call split_install_messages, gtk, $(DESTDIR)$(NETSURF_GTK_RESOURCES))
