--- a/framebuffer/Makefile.target
+++ b/framebuffer/Makefile.target
@@ -59,15 +59,12 @@ ifeq ($(HOST),mint)
 
     LDFLAGS += $(shell curl-config --libs)
     LDFLAGS += $(shell $(PKG_CONFIG) --libs libhubbub openssl libcss)
-    # xml-config returns -lsocket which is not needed and does not
-    # exist on all systems.  because of that - hardcoded reference to
-    # libxml-2.0 here.
     LDFLAGS += -L/usr/lib/ -lz -liconv 
     LDFLAGS += -lm
 else
     CFLAGS += $(shell $(PKG_CONFIG) --cflags libcurl)
 
-    LDFLAGS += $(shell $(PKG_CONFIG) --libs libxml-2.0 libcurl libdom openssl)
+    LDFLAGS += $(shell $(PKG_CONFIG) --libs libcurl libdom openssl)
     LDFLAGS += $(shell $(PKG_CONFIG) --libs libcss)
 endif
 
