--- a/riscos/Makefile.target
+++ b/riscos/Makefile.target
@@ -8,10 +8,10 @@
 # ----------------------------------------------------------------------------
 
 ifeq ($(HOST),riscos)
-  LDFLAGS += -Xlinker -symbols=$(OBJROOT)/sym -lxml2 -lz -lm -lcurl -lcares
+  LDFLAGS += -Xlinker -symbols=$(OBJROOT)/sym -lz -lm -lcurl -lcares
   LDFLAGS += -lssl -lcrypto -ldom -lhubbub -lcss -lparserutils -lwapcaplet
 else
-  LDFLAGS += $(shell $(PKG_CONFIG) --libs libxml-2.0 libcares libcurl openssl)
+  LDFLAGS += $(shell $(PKG_CONFIG) --libs libcares libcurl openssl)
   LDFLAGS += $(shell $(PKG_CONFIG) --libs libdom libcss)
 endif
 
@@ -43,7 +43,6 @@ CFLAGS += -I. $(WARNFLAGS) -Driscos				\
 		-mpoke-function-name -fno-strict-aliasing
 
 CFLAGS += -I$(GCCSDK_INSTALL_ENV)/include			\
-		-I$(GCCSDK_INSTALL_ENV)/include/libxml2		\
 		-I$(GCCSDK_INSTALL_ENV)/include/libmng
 ifeq ($(HOST),riscos)
   CFLAGS += -I<OSLib$$Dir> -mthrowback
