--- a/beos/Makefile.target
+++ b/beos/Makefile.target
@@ -12,7 +12,7 @@
   LDFLAGS += -lssl -lcrypto -lcss
   $(eval $(call feature_enabled,NSSVG,-DWITH_NS_SVG,-lsvgtiny,SVG (libsvgtiny)))
   LDFLAGS += -ldom -lparserutils -lhubbub -lwapcaplet
-  LDFLAGS += -lexpat -lxml2 -lcurl -liconv
+  LDFLAGS += -lexpat -lcurl -liconv
 
   CFLAGS += -I. -O $(WARNFLAGS) -Dnsbeos		\
 		-D_BSD_SOURCE -D_POSIX_C_SOURCE		\
